--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -15,7 +15,7 @@
         </ul>
 
         <form class="form-inline my-2 my-lg-0" onsubmit="event.preventDefault();window.location.replace('/users');">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Login</button>
         </form>
     </div>
 </nav>
