--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -15,7 +15,34 @@
         </ul>
 
         <form class="form-inline my-2 my-lg-0" onsubmit="event.preventDefault();window.location.replace('/users');">
-            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Login</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="button" data-toggle="modal" data-target="#loginModal">Login</button>
         </form>
     </div>
 </nav>
+
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <input type="text" class="form-control" id="loginModalEmail" name="email" placeholder="Email" required>
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control" id="loginModalPassword" name="password" placeholder="Password">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" onclick="location.href='/users/register';">Register</button>
+        <button type="button" class="btn btn-primary" onclick="location.href='/';">Login</button>
+      </div>
+    </div>
+  </div>
+</div>
