--- a/views/users-register.handlebars
+++ b/views/users-register.handlebars
@@ -8,31 +8,31 @@
                 <div class="form-group row">
                     <label for="inputEmail3" class="col-sm-4 col-form-label">First Name</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" id="inputEmail3" placeholder="First Name">
+                        <input type="text" class="form-control" placeholder="First Name" name="firstName" required>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="inputEmail3" class="col-sm-4 col-form-label">Last Name</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" id="inputEmail3" placeholder="Last Name">
+                        <input type="text" class="form-control" placeholder="Last Name" name="lastName" required>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="inputEmail3" class="col-sm-4 col-form-label">Email</label>
                     <div class="col-sm-8">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        <input type="email" class="form-control" placeholder="Email" name="email" required>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="inputPassword3" class="col-sm-4 col-form-label">Password</label>
                     <div class="col-sm-8">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        <input type="password" class="form-control" placeholder="Password" name="password" required>
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="inputPassword3" class="col-sm-4 col-form-label">Confirm Password</label>
+                    <label for="inputPassword3" class="col-sm-4 col-form-label" required>Confirm Password</label>
                     <div class="col-sm-8 ">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Confirm Password">
+                        <input type="password" class="form-control" placeholder="Confirm Password">
                     </div>
                 </div>
                 <div class="form-group row">
