--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -32,10 +32,10 @@
       <div class="modal-body">
         <form>
           <div class="form-group">
-            <input type="text" class="form-control" id="loginModalEmail" name="email" placeholder="Email" required>
+            <input type="text" class="form-control" id="loginModalEmail" name="email" placeholder="Email" autocomplete="username" required>
           </div>
           <div class="form-group">
-            <input type="password" class="form-control" id="loginModalPassword" name="password" placeholder="Password">
+            <input type="password" class="form-control" id="loginModalPassword" name="password" placeholder="Password" autocomplete="current-password" required>
           </div>
         </form>
       </div>
