--- a/views/users-register.handlebars
+++ b/views/users-register.handlebars
@@ -4,35 +4,35 @@
             Registration
         </div>
         <div class="card-body">
-            <form class="register-form" onsubmit="event.preventDefault();registerUser();">
+            <form id="register-form" method="post" action="/users/new">
                 <div class="form-group row">
                     <label for="inputEmail3" class="col-sm-4 col-form-label">First Name</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" placeholder="First Name" name="firstName" required>
+                        <input type="text" class="form-control" placeholder="First Name" name="firstName" autocomplete="given-name" required>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="inputEmail3" class="col-sm-4 col-form-label">Last Name</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" placeholder="Last Name" name="lastName" required>
+                        <input type="text" class="form-control" placeholder="Last Name" name="lastName" autocomplete="family-name" required>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="inputEmail3" class="col-sm-4 col-form-label">Email</label>
                     <div class="col-sm-8">
-                        <input type="email" class="form-control" placeholder="Email" name="email" required>
+                        <input type="email" class="form-control" placeholder="Email" name="email" autocomplete="email" required>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="inputPassword3" class="col-sm-4 col-form-label">Password</label>
                     <div class="col-sm-8">
-                        <input type="password" class="form-control" placeholder="Password" name="password" required>
+                        <input type="password" pattern=".{6,}" title="6 characters minimum" class="form-control" placeholder="Password" name="password" autocomplete="new-password" required>
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="inputPassword3" class="col-sm-4 col-form-label" required>Confirm Password</label>
+                    <label for="inputPassword3" class="col-sm-4 col-form-label">Confirm Password</label>
                     <div class="col-sm-8 ">
-                        <input type="password" class="form-control" placeholder="Confirm Password">
+                        <input type="password" pattern=".{6,}" title="6 characters minimum" class="form-control" placeholder="Confirm Password" name="passwordConfirm" autocomplete="new-password" required>
                     </div>
                 </div>
                 <div class="form-group row">
