--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -35,14 +35,14 @@
         </button>
       </div>
       <div class="modal-body">
-        <form id="loginForm" method="post" action="/users/login">
+        <form id="loginForm" onsubmit="event.preventDefault();usersLogin();">
           <div class="form-group">
-            <input type="text" class="form-control" id="loginModalEmail" name="email" placeholder="Email" autocomplete="username" required>
+            <input type="text" class="form-control" id="loginEmail" name="email" placeholder="Email" autocomplete="username" required>
           </div>
           <div class="form-group">
-            <input type="password" class="form-control" id="loginModalPassword" name="password" placeholder="Password" autocomplete="current-password" required>
+            <input type="password" class="form-control" id="loginPassword" name="password" placeholder="Password" autocomplete="current-password" required>
           </div>
-        
+        <div id="loginInfo" class="alert alert-danger" role="alert" style="display: none;"></div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" onclick="location.href='/users/register';">Register</button>
