--- a/views/users-register.handlebars
+++ b/views/users-register.handlebars
@@ -4,35 +4,38 @@
             Registration
         </div>
         <div class="card-body">
-            <form id="register-form" method="post" action="/users/new">
+            <form id="registerForm" onsubmit="event.preventDefault();usersRegister();">
                 <div class="form-group row">
-                    <label for="inputEmail3" class="col-sm-4 col-form-label">First Name</label>
+                    <label for="registerFormFirstName" class="col-sm-4 col-form-label">First Name:</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" placeholder="First Name" name="firstName" autocomplete="given-name" required>
+                        <input type="text" onchange="resetRegisterFields();" id="registerFormFirstName" class="form-control" placeholder="First Name" name="firstName" autocomplete="given-name" required>
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="inputEmail3" class="col-sm-4 col-form-label">Last Name</label>
+                    <label for="registerFormLastName" class="col-sm-4 col-form-label">Last Name:</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" placeholder="Last Name" name="lastName" autocomplete="family-name" required>
+                        <input type="text" onchange="resetRegisterFields();" id="registerFormLastName" class="form-control" placeholder="Last Name" name="lastName" autocomplete="family-name" required>
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="inputEmail3" class="col-sm-4 col-form-label">Email</label>
+                    <label for="registerFormEmail" class="col-sm-4 col-form-label">Email:</label>
                     <div class="col-sm-8">
-                        <input type="email" class="form-control" placeholder="Email" name="email" autocomplete="email" required>
+                        <input type="email" onchange="resetRegisterFields();" id="registerFormEmail" class="form-control" placeholder="Email" name="email" autocomplete="email" required>
+                        <div class="invalid-feedback" id="registerFormEmailInfo"></div>
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="inputPassword3" class="col-sm-4 col-form-label">Password</label>
+                    <label for="registerFormPassword" class="col-sm-4 col-form-label">Password:</label>
                     <div class="col-sm-8">
-                        <input type="password" pattern=".{6,}" title="6 characters minimum" class="form-control" placeholder="Password" name="password" autocomplete="new-password" required>
+                        <input type="password" onchange="resetRegisterFields();" id="registerFormPassword" pattern=".{6,}" title="6 characters minimum" class="form-control" placeholder="Password" name="password" autocomplete="new-password" required>
+                        <div class="invalid-feedback" id="registerFormPasswordInfo"></div>
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="inputPassword3" class="col-sm-4 col-form-label">Confirm Password</label>
+                    <label for="registerFormConfirmPassword" class="col-sm-4 col-form-label">Confirm Password:</label>
                     <div class="col-sm-8 ">
-                        <input type="password" pattern=".{6,}" title="6 characters minimum" class="form-control" placeholder="Confirm Password" name="passwordConfirm" autocomplete="new-password" required>
+                        <input type="password" onchange="resetRegisterFields();" id="registerFormConfirmPassword" pattern=".{6,}" title="6 characters minimum" class="form-control" placeholder="Confirm Password" name="passwordConfirm" autocomplete="new-password" required>
+                        <div class="invalid-feedback" id="registerFormConfirmPasswordInfo"></div>
                     </div>
                 </div>
                 <div class="form-group row">
