Some more appealing placeholder styles ftb

--- a/views/charities-list.handlebars
+++ b/views/charities-list.handlebars
@@ -1,1 +1,3 @@
-<h3>List of Charities</h3>
+<div class="jumbotron">
+  <p class="lead" style="text-align:center;">Future List of Charities 🤔</p>
+</div>
