--- a/views/charities-list.handlebars
+++ b/views/charities-list.handlebars
@@ -1,3 +1,5 @@
+<div class="card charitiesContainer">
 <div class="jumbotron">
   <p class="lead" style="text-align:center;">Future List of Charities 🤔</p>
+</div>
 </div>
