--- a/views/charities-show.handlebars
+++ b/views/charities-show.handlebars
@@ -1,7 +1,10 @@
+<div class="card charitiesContainer">
 {{#if session.userId}}
 <div class="jumbotron">
-  <p class="lead" style="text-align:center;">Hello, {{user.firstName}} {{user.lastName}}! 😃</p>
+    <h1 class="display-4" id="userLabel" user-id={{user._id}}>Hello {{user.firstName}}!</h1>
+    <p class="lead">Make updates to your charities below or find new charities <a href='/charities'>here</a>.</p>
 </div>
+{{>charities-table}}
 {{else}}
 <div class="jumbotron">
   <h1 class="display-4">Get Started Today!</h1>
@@ -11,3 +14,4 @@
   <a class="btn btn-primary btn-lg" href="/users/register" role="button">Register</a>
 </div>
 {{/if}}
+</div>
