--- a/views/partials/charities-table.handlebars
+++ b/views/partials/charities-table.handlebars
@@ -16,12 +16,14 @@
                   <tr>
                     <td id="{{slice8 this._id}}-name">{{this.name}}</td>
                     <td>
+                    <form onsubmit="event.preventDefault();updateCharity('{{slice8 this._id}}');">
                       <div class="input-group">
-                      <input type="number" id="{{slice8 this._id}}-amount" min="0" class="form-control" placeholder="Amount" value="{{this.amount}}">
+                      <input type="number" id="{{slice8 this._id}}-amount" min="0.01" step="0.01" class="form-control" placeholder="Amount" value="{{this.amount}}">
                       <div class="input-group-append">
-                      <button class="btn btn-outline-success" type="button" onclick="updateCharity('{{slice8 this._id}}')">Update</button>
+                      <button class="btn btn-outline-success" type="submit">Update</button>
                       </div>
                       </div>
+                  </form>
                   </td>
                   <td>
                       <button class="btn btn-danger" type="button" onclick="deleteCharity('{{slice8 this._id}}');">Delete</button>
@@ -67,7 +69,7 @@
             <input type="text" class="form-control" id="addCharityName" name="name" placeholder="Name" required>
           </div>
           <div class="form-group">
-            <input type="number" min="0" class="form-control" id="addCharityAmount" name="amount" placeholder="Amount" required>
+            <input type="number" min="0.01" step="0.01" class="form-control" id="addCharityAmount" name="amount" placeholder="Amount" required>
           </div>
         <div id="addCharityInfo" class="alert alert-danger" role="alert" style="display: none;"></div>
       </div>
