--- a/views/charities-list.handlebars
+++ b/views/charities-list.handlebars
@@ -1,5 +1,64 @@
 <div class="card charitiesContainer">
-<div class="jumbotron">
-  <p class="lead" style="text-align:center;">Future List of Charities 🤔</p>
+
+    {{#unless charities}}
+    <div class="jumbotron">
+        <p class="lead" style="text-align:center;">Oops! We are having trouble retreiving the data.</p>
+        </div>
+    {{/unless}}
+    
+{{#each charities}}
+{{#if this.listImageURL}}
+{{#if this.listAbstract}}
+<div class="row flexrow">
+    <div class="col-sm-6 flexcol">
+      <div class="card cardLeft flexcont">
+        <div class="card-body groupContainer">
+            <div class="flexcol">
+                <img class="groupImg" src="{{this.listImageURL}}" />
+            </div>
+            <div class="flexcol">
+                <p class="groupText"><a href="/charities/{{this.listID}}">{{this.listName}}</a></p>
+            </div>            
+        </div>
+      </div>
+    </div>
+  <div class="col-sm-6 flexcol">
+    <div class="card cardRight flexcont">
+        <div class="card-header">
+            Abstract
+        </div>
+      <div class="card-body ">
+        <p class="">{{this.listAbstract}}</p>
+      </div>
+    </div>
+  </div>
 </div>
+{{/if}}
+{{/if}}
+{{/each}}
+<div class="modal fade" id="addCharityModal" tabindex="-1" role="dialog" aria-labelledby="addCharityModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addCharityModalLabel">Add Charity</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form id="addCharityForm" onsubmit="event.preventDefault();addCharity();">
+          <div class="form-group">
+            <input type="text" class="form-control" id="addCharityName" name="name" placeholder="Name" required>
+          </div>
+          <div class="form-group">
+            <input type="number" min="0.01" step="0.01" class="form-control" id="addCharityAmount" name="amount" placeholder="Amount" required>
+          </div>
+        <div id="addCharityInfo" class="alert alert-danger" role="alert" style="display: none;"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-success">Add</button>
+      </div>
+      </form>
+    </div>
+  </div>
 </div>
