--- a/views/charities-list.handlebars
+++ b/views/charities-list.handlebars
@@ -1,3 +1,9 @@
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb" style="background-color:white; margin-bottom:0;">
+      <hr />
+    <li class="breadcrumb-item active">Charities</a></li>
+  </ol>
+</nav>
 <div class="card charitiesContainer">
 
     {{#unless charities}}
