--- a/views/partials/charities-table.handlebars
+++ b/views/partials/charities-table.handlebars
@@ -47,7 +47,7 @@
         <div class="card-header">
             Current Contributions Total
         </div>
-      <div class="card-body flextext">
+      <div class="card-body flexText totalText">
         <p class="card-text">{{total charities}}</p>
       </div>
     </div>
