--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -24,6 +24,7 @@
 
 .charitiesContainer {
     margin: 2em;
+    margin-top: 0;
 }
 
 .cardLeft {
@@ -49,18 +50,15 @@
 }
 
 .flexcont {
-  box-shadow: 0 0 4px rgba(0,0,0,0.4);
   flex: 0 0 100%;
   flex-shrink: 1;
 }
 
-.flextext {
+.flexText {
   display: flex;
   justify-content: center;
-  font-size: 3em;
-  color: green;
-  flex-shrink: 1;
   align-items: center;
+  flex-shrink: 1;
 }
 
 .apiImg {
@@ -95,4 +93,24 @@
 }
 .groupContainer {
     display: flex;
+}
+
+.ratingText {
+    font-size: 0.8em;
+}
+.ratingHeaderText {
+    font-size: 1.2em;
+    margin: 0;
+    padding: 0;
+    text-decoration: underline;
+}
+.boxShadow {
+    box-shadow: 0 0 4px rgba(0,0,0,0.4);
+}
+.totalText {
+    font-size: 3em;
+    color: green;
+}
+.centerText {
+    text-align: center;
 }
