--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -14,11 +14,11 @@
             </li>
         </ul>
         {{#if session.userId}}
-        <form class="form-inline my-2 my-lg-0" method="post" action="/users/logout">
+        <form class="form-inline my-2 my-lg-0" onsubmit="event.preventDefault();usersLogout()">
             <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Logout</button>
         </form>
         {{else}}
-        <form class="form-inline my-2 my-lg-0" onsubmit="event.preventDefault();window.location.replace('/users');">
+        <form class="form-inline my-2 my-lg-0" onsubmit="event.preventDefault();">
             <button class="btn btn-outline-primary my-2 my-sm-0" type="button" data-toggle="modal" data-target="#loginModal">Login</button>
         </form>
         {{/if}}
