--- a/views/partials/charities-table.handlebars
+++ b/views/partials/charities-table.handlebars
@@ -4,8 +4,9 @@
         <table class="table">
           <thead class="thead-light">
             <tr>
-              <th scope="col">Charity Name</th>
+              <th scope="col">Organization Name</th>
               <th scope="col">Amount Given</th>
+              <th scope="col"></th>
               <th scope="col"></th>
             </tr>
           </thead>
@@ -16,15 +17,11 @@
                   <tr>
                     <td id="{{slice8 this._id}}-name">{{this.name}}</td>
                     <td>
-                    <form onsubmit="event.preventDefault();updateCharity('{{slice8 this._id}}');">
-                      <div class="input-group">
-                      <input type="number" id="{{slice8 this._id}}-amount" min="0.01" step="0.01" class="form-control" placeholder="Amount" value="{{this.amount}}">
-                      <div class="input-group-append">
-                      <button class="btn btn-outline-success" type="submit">Update</button>
-                      </div>
-                      </div>
-                  </form>
-                  </td>
+                      {{totalArray this.donations}}
+                    </td>
+                    <td>
+                        <button id="addDonation-{{slice8 this._id}}" charity-id="{{this._id}}" class="btn btn-outline-success" type="button" onclick="openDonationModal('{{slice8 this._id}}', '{{this.name}}', [{{this.donations}}]);">Add Donation</button>
+                    </td>
                   <td>
                       <button class="btn btn-danger" type="button" onclick="deleteCharity('{{slice8 this._id}}');">Delete</button>
                   </td>
@@ -32,6 +29,7 @@
                   {{/each}}
               </div>
             <tr>
+              <td></td>
               <td></td>
               <td></td>
               <td>
@@ -54,6 +52,7 @@
   </div>
 </div>
 
+<!-- ADD CHARITY MODAL BEGIN -->
 <div class="modal fade" id="addCharityModal" tabindex="-1" role="dialog" aria-labelledby="addCharityModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -69,7 +68,7 @@
             <input type="text" class="form-control" id="addCharityName" name="name" placeholder="Name" required>
           </div>
           <div class="form-group">
-            <input type="number" min="0.01" step="0.01" class="form-control" id="addCharityAmount" name="amount" placeholder="Amount" required>
+            <input type="number" min="0.01" step="0.01" class="form-control" id="addCharityAmount" name="amount" placeholder="Initial Donation" required>
           </div>
         <div id="addCharityInfo" class="alert alert-danger" role="alert" style="display: none;"></div>
       </div>
@@ -77,6 +76,35 @@
         <button type="submit" class="btn btn-success">Add</button>
       </div>
       </form>
+    </div>
+  </div>
+</div>
+<!-- ADD CHARITY MODAL END -->
+
+<!-- ADD DONATION MODAL BEGIN -->
+<div class="modal fade" id="addDonationModal" tabindex="-1" role="dialog" aria-labelledby="addDonationModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addDonationModalLabel">Add Donation</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <div id="addDonationModalTable">
+              
+          </div>
+        <form id="addDonationModalForm" onsubmit="event.preventDefault();addDonation();">
+          <div class="form-group">
+            <input type="number" min="0.01" step="0.01" class="form-control" id="addDonationAmount" name="amount" placeholder="Amount" required>
+          </div>
+          <button type="submit" class="btn btn-success">Add</button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" data-dismiss="modal" class="btn btn-success">Done</button>
+      </div>
     </div>
   </div>
 </div>
