Scrollable table in add donations modal

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -114,3 +114,9 @@
 .centerText {
     text-align: center;
 }
+.table-wrapper {
+    display: block;
+    max-height: 24em;
+    overflow-y: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+}
