--- a/views/partials/charities-table.handlebars
+++ b/views/partials/charities-table.handlebars
@@ -92,7 +92,7 @@
         </button>
       </div>
       <div class="modal-body">
-          <div id="addDonationModalTable">
+          <div id="addDonationModalTable" class="table-wrapper">
               
           </div>
         <form id="addDonationModalForm">
