Fixed add duplicate charity for multiple users bug

--- a/views/partials/charities-table.handlebars
+++ b/views/partials/charities-table.handlebars
@@ -20,7 +20,7 @@
                       {{totalArray this.donations}}
                     </td>
                     <td>
-                        <button id="addDonation-{{slice8 this._id}}" charity-id="{{this._id}}" class="btn btn-outline-success" type="button" onclick="openDonationModal('{{slice8 this._id}}');">Add Donation</button>
+                        <button id="addDonation-{{slice8 this._id}}" charity-id="{{this._id}}" class="btn btn-outline-success" type="button" onclick="openDonationModal('{{slice8 this._id}}');">Donations</button>
                     </td>
                   <td>
                       <button class="btn btn-danger" type="button" onclick="deleteCharity('{{slice8 this._id}}');">Delete</button>
