--- a/views/charities-show.handlebars
+++ b/views/charities-show.handlebars
@@ -1,4 +1,4 @@
-<div class="card charitiesContainer" style="margin-top:2em;">
+<div class="card charitiesContainer m-4">
 {{#if session.userId}}
 <div class="jumbotron">
     <h1 class="display-4" id="userLabel" user-id={{user._id}}>Hello {{user.firstName}}!</h1>
