--- a/views/partials/charities-table.handlebars
+++ b/views/partials/charities-table.handlebars
@@ -1,7 +1,7 @@
-<div class="row flexrow">
-  <div class="col-sm-6 flexcol">
-    <div class="card cardLeft flexcont">
-        <table class="table">
+<div class="row">
+  <div class="d-flex flex-fill m-5">
+    <div class="card flex-fill shadow">
+        <table class="table m-0">
           <thead class="thead-light">
             <tr>
               <th scope="col">Organization Name</th>
@@ -40,13 +40,13 @@
         </table>
     </div>
   </div>
-  <div class="col-sm-6 flexcol">
-    <div class="card cardRight flexcont">
+  <div class="d-flex flex-fill m-5 ml-5">
+    <div class="card flex-fill shadow">
         <div class="card-header">
             Current Contributions Total
         </div>
-      <div class="card-body flexText totalText">
-        <p class="card-text" id="contributionsTotal">{{total charities}}</p>
+      <div class="card-body d-flex align-self-center">
+        <p class="align-self-center text-success display-4" id="contributionsTotal">{{total charities}}</p>
       </div>
     </div>
   </div>
@@ -54,7 +54,7 @@
 
 <!-- ADD CHARITY MODAL BEGIN -->
 <div class="modal fade" id="addCharityModal" tabindex="-1" role="dialog" aria-labelledby="addCharityModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="addCharityModalLabel">Add Charity</h5>
@@ -83,7 +83,7 @@
 
 <!-- ADD DONATION MODAL BEGIN -->
 <div class="modal fade" id="addDonationModal" tabindex="-1" role="dialog" aria-labelledby="addDonationModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="addDonationModalLabel">Add Donation</h5>
