Css cleanup header and footer done

--- a/views/partials/charities-table.handlebars
+++ b/views/partials/charities-table.handlebars
@@ -70,7 +70,7 @@
           <div class="form-group">
             <input type="number" min="0.01" step="0.01" class="form-control" id="addCharityAmount" name="amount" placeholder="Initial Donation" required>
           </div>
-        <div id="addCharityInfo" class="alert alert-danger" role="alert" style="display: none;"></div>
+        <div id="addCharityInfo" class="alert alert-danger d-none" role="alert"></div>
       </div>
       <div class="modal-footer">
         <button type="submit" class="btn btn-success">Add</button>
