--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -25,7 +25,7 @@
     </div>
 </nav>
 
-<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+<div class="modal fade mt-5" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -42,7 +42,7 @@
           <div class="form-group">
             <input type="password" class="form-control" id="loginPassword" name="password" placeholder="Password" autocomplete="current-password" required>
           </div>
-        <div id="loginInfo" class="alert alert-danger" role="alert" style="display: none;"></div>
+        <div id="loginInfo" class="alert alert-danger d-none" role="alert"></div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" onclick="location.href='/users/register';">Register</button>
