--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -12,6 +12,27 @@
      vertical-align: middle;
 }
 
+.groupImg {
+    width: 15em;
+    height: 15em;   
+}
+
+.groupText {
+    font-weight: 300;
+    font-size: 1.3em;
+    color: black;
+}
+
+a > .card-body:hover {
+    
+    background-color: rgba(200, 200, 200, 0.3);
+    opacity: 0.7;
+}
+
+.card > a:hover {
+    text-decoration: none;
+}
+
 .registration-panel {
     margin: 2em auto 2em auto!important;
     width: 60%!important;
@@ -80,27 +101,8 @@
     padding-top: 0!important;
     padding-bottom: 0!important;
 }
-.groupImg {
-    width: 15em;
-    height: 15em;   
-    border-radius: 100%;
-    justify-content: flex-start!important;
-}
-.groupText {
-    display: flex;
-    align-items:center;
-    justify-content: flex-end; 
-    vertical-align: center;
-    font-weight: 500;
-    font-size: 1.2em;
-}
-.groupText a {
-    color: black;
-}
-.groupText a:hover {
-    color: blue;
-    text-decoration: none;
-}
+
+
 .groupContainer {
     display: flex;
 }
