--- a/views/charities-list.handlebars
+++ b/views/charities-list.handlebars
@@ -1,10 +1,10 @@
 <nav aria-label="breadcrumb">
-  <ol class="breadcrumb" style="background-color:white; margin-bottom:0;">
+  <ol class="breadcrumb bg-white mb-0">
       <hr />
     <li class="breadcrumb-item active">Charities</a></li>
   </ol>
 </nav>
-<div class="card charitiesContainer">
+<div class="card mx-5">
 
     {{#unless charities}}
     <div class="jumbotron">
@@ -15,21 +15,21 @@
 {{#each charities}}
 {{#if this.listImageURL}}
 {{#if this.listAbstract}}
-<div class="row flexrow">
-    <div class="col-sm-6 flexcol">
-      <div class="card cardLeft flexcont">
-        <div class="card-body groupContainer">
-            <div class="flexcol">
-                <img class="groupImg" src="{{this.listImageURL}}" />
-            </div>
-            <div class="flexcol">
-                <p class="groupText"><a href="/charities/{{this.listID}}">{{this.listName}}</a></p>
-            </div>            
+<div class="d-flex flex-row">
+    <div class="d-flex flex-fill m-5">
+      <div class="card flex-fill shadow">
+        <a href="/charities/{{this.listID}}">
+        <div class="card-body d-flex">
+            
+                <img class="rounded-circle groupImg" src="{{this.listImageURL}}" />
+                <p class="align-self-center mx-5 groupText">{{this.listName}}</p>   
+            
         </div>
+        </a>
       </div>
     </div>
-  <div class="col-sm-6 flexcol">
-    <div class="card cardRight flexcont">
+  <div class="d-flex flex-fill m-5 ml-5">
+    <div class="card flex-fill shadow">
         <div class="card-header">
             Abstract
         </div>
