--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -4,7 +4,7 @@
           <span>Charity Tracker Services &copy; 2018 &#124; <a href="tel:5555555555">(555) 555-55555</a></span>
       </li>
     </ul>
-    <span class="navbar-text">
+    <span class="navbar-text p-0">
       Data Provided By: <a href="https://www.charitynavigator.org/" target="_blank"><img class="apiImg" src="https://www.charitynavigator.org/_gfx_/promo/printable/jpegs/general_banner_white.jpg" alt="Charity Navigator"/></a>
     </span>
 
