--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -15,11 +15,11 @@
         </ul>
         {{#if session.userId}}
         <form class="form-inline my-2 my-lg-0" onsubmit="event.preventDefault();usersLogout()">
-            <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Logout</button>
+            <button class="btn btn-outline-danger my-2 my-sm-0 px-3" type="submit">Logout</button>
         </form>
         {{else}}
         <form class="form-inline my-2 my-lg-0" onsubmit="event.preventDefault();">
-            <button class="btn btn-outline-primary my-2 my-sm-0" type="button" data-toggle="modal" data-target="#loginModal">Login</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0 px-3" type="button" data-toggle="modal" data-target="#loginModal">Login</button>
         </form>
         {{/if}}
     </div>
@@ -45,7 +45,7 @@
         <div id="loginInfo" class="alert alert-danger d-none" role="alert"></div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" onclick="location.href='/users/register';">Register</button>
+        <button type="button" class="btn btn-outline-primary" onclick="location.href='/users/register';">Register</button>
         <button type="submit" class="btn btn-primary">Login</button>
       </div>
       </form>
