--- a/views/users-register.handlebars
+++ b/views/users-register.handlebars
@@ -1,5 +1,5 @@
-<div class="container">
-    <div class="card registration-panel">
+<div class="container col-lg-4">
+    <div class="card my-5">
         <div class="card-header">
             Registration
         </div>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="form-group row">
                     <div class="col-lg-12">
-                        <button type="submit" class="btn btn-primary float-right create-button">Create</button>
+                        <button type="submit" class="btn btn-primary float-right px-4">Create</button>
                     </div>
                 </div>
             </form>
