--- a/views/charities-show.handlebars
+++ b/views/charities-show.handlebars
@@ -6,7 +6,7 @@
 </div>
 {{>charities-table}}
 {{else}}
-<div class="jumbotron">
+<div class="jumbotron mb-0">
   <h1 class="display-4">Get Started Today!</h1>
   <p class="lead">A simple tool to track the charities you donate to.</p>
   <hr class="my-4">
