--- a/views/charities-list.handlebars
+++ b/views/charities-list.handlebars
@@ -15,20 +15,20 @@
 {{#each charities}}
 {{#if this.listImageURL}}
 {{#if this.listAbstract}}
-<div class="d-flex flex-row">
-    <div class="d-flex flex-fill m-5">
-      <div class="card flex-fill shadow">
+<div class="row">
+    <div class="d-flex flex-fill m-5" style="width:35em;">
+      <div class="card flex-fill shadow" >
         <a href="/charities/{{this.listID}}">
         <div class="card-body d-flex">
             
                 <img class="rounded-circle groupImg" src="{{this.listImageURL}}" />
-                <p class="align-self-center mx-5 groupText">{{this.listName}}</p>   
+                <p class="align-self-center mx-5 groupText" >{{this.listName}}</p>   
             
         </div>
         </a>
       </div>
     </div>
-  <div class="d-flex flex-fill m-5 ml-5">
+  <div class="d-flex flex-fill m-5 ml-5" style="width:20em;">
     <div class="card flex-fill shadow">
         <div class="card-header">
             Abstract
