--- a/views/charities-organizations-show.handlebars
+++ b/views/charities-organizations-show.handlebars
@@ -10,12 +10,12 @@
 <input type="hidden" id="charityName" value="{{organization.charityName}}">
 <input type="hidden" id="userId" value="{{session.userId}}">
     {{#unless organization}}
-    <div class="jumbotron">
+    <div class="jumbotron mb-5">
         <p class="lead" style="text-align:center;">Oops! We are having trouble retreiving the data.</p>
     </div>
-    {{/unless}}
+    {{else}}
     <div class="card charitiesContainer boxShadow">
-        <div class="jumbotron">
+        <div class="jumbotron mb-0">
             <p class="lead" style="text-align:center;font-size:2em;">{{organization.charityName}}</p>
         </div>
         <div class="card-body">
@@ -74,3 +74,4 @@
                     </div>
         </div>
     </div>
+    {{/unless}}
