--- a/views/charities-show.handlebars
+++ b/views/charities-show.handlebars
@@ -1,6 +1,6 @@
-<div class="card charitiesContainer m-5">
+<div class="card m-5 shadow-lg" style="margin-top:57px!important;">
 {{#if session.userId}}
-<div class="jumbotron">
+<div class="jumbotron mb-0">
     <h1 class="display-4" id="userLabel" user-id={{user._id}}>Hello {{user.firstName}}!</h1>
     <p class="lead">Make updates to your charities below or find new charities <a href='/charities'>here</a>.</p>
 </div>
