--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,9 @@
 
 <body>
     {{>header}}
-    {{{body}}}
+    <div style="padding-top:56px;padding-bottom:56px;">
+        {{{body}}}
+    </div>
     {{>footer}}
     <!-- Our Javascript goes at the bottom -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
