--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-bottom">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
           <span>Charity Tracker Services &copy; 2018 &#124; <a href="tel:5555555555">(555) 555-55555</a></span>
