--- a/views/charities-list.handlebars
+++ b/views/charities-list.handlebars
@@ -1,44 +1,38 @@
 <nav aria-label="breadcrumb">
-  <ol class="breadcrumb bg-white mb-0">
-      <hr />
-    <li class="breadcrumb-item active">Charities</a></li>
-  </ol>
+    <ol class="breadcrumb bg-white mb-0">
+        <hr />
+        <li class="breadcrumb-item active">Charities</a></li>
+    </ol>
 </nav>
-<div class="card mx-5">
-
-    {{#unless charities}}
-    <div class="jumbotron">
+{{#unless charities}}
+    <div class="jumbotron mb-5">
         <p class="lead" style="text-align:center;">Oops! We are having trouble retreiving the data.</p>
-        </div>
-    {{/unless}}
-    
-{{#each charities}}
-{{#if this.listImageURL}}
-{{#if this.listAbstract}}
-<div class="row">
-    <div class="d-flex flex-fill m-5" style="width:35em;">
-      <div class="card flex-fill shadow" >
-        <a href="/charities/{{this.listID}}">
-        <div class="card-body d-flex">
-            
-                <img class="rounded-circle groupImg" src="{{this.listImageURL}}" />
-                <p class="align-self-center mx-5 groupText" >{{this.listName}}</p>   
-            
+    </div>
+{{/unless}}
+<div class="charity-card">
+    {{#each charities}}
+        {{#if this.listImageURL}}
+            {{#if this.listAbstract}}
+                <div class="d-flex mx-5 my-5">
+                    <div class="card flex-fill shadow-lg">
+                        <a href="/charities/{{this.listID}}">
+        <div class="card-body d-flex flex-row">
+            <div class="d-flex flex-column justify-content-center">
+                <img class="groupImg shadow-lg" src="{{this.listImageURL}}" />
+                </div>
+          <div class="d-flex flex-column align-items-center flex-fill" >
+              <div class="w-75 mb-4 text-center h3">
+                      <u>{{this.listName}}</u>
+              </div>
+            <div class="w-75 text-left">
+                     {{this.listAbstract}}
+            </div>
+          </div>
         </div>
         </a>
-      </div>
-    </div>
-  <div class="d-flex flex-fill m-5 ml-5" style="width:20em;">
-    <div class="card flex-fill shadow">
-        <div class="card-header">
-            Abstract
-        </div>
-      <div class="card-body ">
-        <p class="">{{this.listAbstract}}</p>
-      </div>
-    </div>
-  </div>
+                    </div>
+                </div>
+            {{/if}}
+        {{/if}}
+    {{/each}}
 </div>
-{{/if}}
-{{/if}}
-{{/each}}
