--- a/views/partials/charities-table.handlebars
+++ b/views/partials/charities-table.handlebars
@@ -1,6 +1,9 @@
-<div class="row">
-  <div class="d-flex flex-fill m-5">
-    <div class="card flex-fill shadow" style="width:35em;">
+<div class="card-body">
+    
+
+<div class="d-flex flex-row flex-wrap mx-4">
+  <div class="d-flex flex-fill col-lg-6 my-4">
+    <div class="card flex-fill shadow">
         
         <table class="table m-0 charityTable">
           <thead class="thead-light">
@@ -38,7 +41,7 @@
         <button class="btn btn-success float-right px-4" type="button" data-toggle="modal" data-target="#addCharityModal">Add</button>
     </div>
   </div>
-  <div class="d-flex flex-fill m-5 ml-5">
+  <div class="d-flex flex-fill col-lg-6 my-4">
     <div class="card flex-fill shadow">
         <div class="card-header">
             Current Contributions Total
@@ -49,7 +52,7 @@
     </div>
   </div>
 </div>
-
+</div>
 <!-- ADD CHARITY MODAL BEGIN -->
 <div class="modal fade" id="addCharityModal" tabindex="-1" role="dialog" aria-labelledby="addCharityModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
