--- a/views/charities-organizations-show.handlebars
+++ b/views/charities-organizations-show.handlebars
@@ -1,77 +1,76 @@
 <nav aria-label="breadcrumb">
-  <ol class="breadcrumb bg-white mb-0">
-      <hr />
-    <li class="breadcrumb-item"><a href="/charities">Charities</a></li>
-    <li class="breadcrumb-item"><a id="charityNavLink" href="../"></a></li>
-    <li class="breadcrumb-item active" aria-current="page">{{organization.charityName}}</li>
-  </ol>
+    <ol class="breadcrumb bg-white mb-0">
+        <hr />
+        <li class="breadcrumb-item"><a href="/charities">Charities</a></li>
+        <li class="breadcrumb-item"><a id="charityNavLink" href="../"></a></li>
+        <li class="breadcrumb-item active" aria-current="page">{{organization.charityName}}</li>
+    </ol>
 </nav>
-
 <input type="hidden" id="charityName" value="{{organization.charityName}}">
 <input type="hidden" id="userId" value="{{session.userId}}">
-    {{#unless organization}}
+{{#unless organization}}
     <div class="jumbotron mb-5">
         <p class="lead text-center">Oops! We are having trouble retreiving the data.</p>
     </div>
-    {{else}}
+{{else}}
     <div class="card mt-0 mb-5 mx-5 shadow-lg">
         <div class="jumbotron mb-0">
             <p class="lead text-center" style="font-size:2em;">{{organization.charityName}}</p>
         </div>
         <div class="card-body">
-                    <div class="d-flex flex-row flex-wrap mx-4">
-                        <div class="d-flex flex-fill col-lg-6 my-4">
-                          <div class="card flex-fill shadow">
-                              <div class="card-header">
-                                  Mission
-                              </div>
-                            <div class="card-body">
-                                    {{returnHtml organization.mission}}         
-                            </div>
-                          </div>
+            <div class="d-flex flex-row flex-wrap mx-4">
+                <div class="d-flex flex-fill col-lg-6 my-4">
+                    <div class="card flex-fill shadow">
+                        <div class="card-header">
+                            Mission
                         </div>
-                      <div class="d-flex flex-fill col-lg-6 my-4">
-                        <div class="card flex-fill shadow">
-                            <div class="card-header">
-                                Information
-                            </div>
-                          <div class="card-body">
-                              <p class="text-center">
-                                  "{{organization.tagLine}}"
-                              </p>
-                              <hr />
-                              <div class="d-flex flex-row flex-wrap">
-                                  <div class="d-flex flex-column justify-content-center col-md-6">
-                                      <div class="text-center">
-                                          <p class="mt-3 mb-0" style="font-size: 1.2em;">
-                                              <u>Rating</u>
-                                          </p> 
-                                          <img src="{{organization.currentRating.ratingImage.large}}"/> 
-                                          <p style="font-size: 0.8em;">
-                                              {{organization.currentRating.score}} / 100
-                                          </p>
-                                      </div>
-                                  </div>
-                                  <div class="d-flex flex-column justify-content-center col-md-6">
-                                      <div class="text-center">
-                                          <p class="m-0">
-                                              Website: 
-                                          </p> 
-                                          <a href="{{organization.websiteURL}}" target="_blank">{{organization.websiteURL}}</a>
-                                          <p class="m-0">
-                                              Email: 
-                                          </p>
-                                          <a href="mailto:{{organization.generalEmail}}">{{organization.generalEmail}}</a>
-                                      </div>
-                                  </div>
-                              </div>
-                              {{#if session.userId}}
-                                <button id="addToProfileBtn" class="btn btn-outline-success float-right mt-3" type="button" onclick="addToProfile('{{session.userId}}', '{{organization.charityName}}');">Add to Profile</button>
-                              {{/if}}
-                          </div>
+                        <div class="card-body">
+                            {{returnHtml organization.mission}}
                         </div>
-                      </div>
                     </div>
+                </div>
+                <div class="d-flex flex-fill col-lg-6 my-4">
+                    <div class="card flex-fill shadow">
+                        <div class="card-header">
+                            Information
+                        </div>
+                        <div class="card-body d-flex flex-column">
+                                <p class="text-center m-0">
+                                    "{{organization.tagLine}}"
+                                </p>
+                            <hr />
+                            <div class="d-flex flex-row flex-wrap mb-4">
+                                <div class="d-flex flex-column justify-content-center col-md-6">
+                                    <div class="text-center">
+                                        <p class="m-0" style="font-size: 1.2em;">
+                                            <u>Rating</u>
+                                        </p>
+                                        <img src="{{organization.currentRating.ratingImage.large}}"/>
+                                        <p class="m-0" style="font-size: 0.8em;">
+                                            {{organization.currentRating.score}} / 100
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="d-flex flex-column justify-content-center col-md-6">
+                                    <div class="text-center">
+                                        <p class="m-0">
+                                            Website:
+                                        </p>
+                                        <a href="{{organization.websiteURL}}" target="_blank">{{organization.websiteURL}}</a>
+                                        <p class="m-0">
+                                            Email:
+                                        </p>
+                                        <a href="mailto:{{organization.generalEmail}}">{{organization.generalEmail}}</a>
+                                    </div>
+                                </div>
+                            </div>
+                            {{#if session.userId}}
+                                <button id="addToProfileBtn" class="btn btn-outline-success mt-auto" type="button" onclick="addToProfile('{{session.userId}}', '{{organization.charityName}}');">Add to Profile</button>
+                            {{/if}}
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    {{/unless}}
+{{/unless}}
