--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -3,7 +3,6 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -14,41 +13,43 @@
             </li>
         </ul>
         {{#if session.userId}}
-        <form class="form-inline my-2 my-lg-0" onsubmit="event.preventDefault();usersLogout()">
-            <button class="btn btn-outline-danger my-2 my-sm-0 px-3" type="submit">Logout</button>
-        </form>
+            <form class="form-inline my-2 my-lg-0" onsubmit="event.preventDefault();usersLogout()">
+                <button class="btn btn-outline-danger my-2 my-sm-0 px-3" type="submit">Logout</button>
+            </form>
         {{else}}
-        <form class="form-inline my-2 my-lg-0" onsubmit="event.preventDefault();">
-            <button class="btn btn-outline-primary my-2 my-sm-0 px-3" type="button" data-toggle="modal" data-target="#loginModal">Login</button>
-        </form>
+            <form class="form-inline my-2 my-lg-0" onsubmit="event.preventDefault();">
+                <button class="btn btn-outline-primary my-2 my-sm-0 px-3" type="button" data-toggle="modal" data-target="#loginModal">Login</button>
+            </form>
         {{/if}}
     </div>
 </nav>
 
+<!-- LOGIN MODAL START -->
 <div class="modal fade mt-5" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="loginModalLabel">Login</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="loginModalLabel">Login</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-      </div>
-      <div class="modal-body">
-        <form id="loginForm" onsubmit="event.preventDefault();usersLogin();">
-          <div class="form-group">
-            <input type="text" class="form-control" id="loginEmail" name="email" placeholder="Email" autocomplete="username" required>
+            </div>
+            <div class="modal-body">
+                <form id="loginForm" onsubmit="event.preventDefault();usersLogin();">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="loginEmail" name="email" placeholder="Email" autocomplete="username" required>
           </div>
-          <div class="form-group">
-            <input type="password" class="form-control" id="loginPassword" name="password" placeholder="Password" autocomplete="current-password" required>
+                        <div class="form-group">
+                            <input type="password" class="form-control" id="loginPassword" name="password" placeholder="Password" autocomplete="current-password" required>
           </div>
-        <div id="loginInfo" class="alert alert-danger d-none" role="alert"></div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-primary" onclick="location.href='/users/register';">Register</button>
-        <button type="submit" class="btn btn-primary">Login</button>
-      </div>
-      </form>
+                            <div id="loginInfo" class="alert alert-danger d-none" role="alert"></div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-outline-primary" onclick="location.href='/users/register';">Register</button>
+                            <button type="submit" class="btn btn-primary">Login</button>
+                        </div>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
+    <!-- LOGIN MODAL END -->
