Login modal fix

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -42,7 +42,7 @@
                         <div class="form-group">
                             <input type="password" class="form-control" id="loginPassword" name="password" placeholder="Password" autocomplete="current-password" required>
           </div>
-                            <div id="loginInfo" class="alert alert-danger d-none" role="alert"></div>
+                            <div id="loginInfo" class="alert alert-danger" style="display:none;" role="alert"></div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-outline-primary" onclick="location.href='/users/register';">Register</button>
