--- a/views/charities-show.handlebars
+++ b/views/charities-show.handlebars
@@ -1,4 +1,4 @@
-<div class="card m-5 shadow-lg" style="margin-top:57px!important;">
+<div class="card m-5 shadow-lg" style="margin-top:57px;">
     {{#if session.userId}}
         <div class="jumbotron mb-0">
             <h1 class="display-4" id="userLabel" user-id={{user._id}}>Hello {{user.firstName}}!</h1>
