--- a/views/partials/charities-table.handlebars
+++ b/views/partials/charities-table.handlebars
@@ -2,7 +2,7 @@
     <div class="d-flex flex-row flex-wrap mx-4">
         <div class="d-flex flex-fill col-lg-6 my-4">
             <div class="card flex-fill shadow">
-                <table class="table m-0 charityTable">
+                <table class="table m-0">
                     <thead class="thead-light">
                         <tr>
                             <th scope="col" style="width: 40%">Organization Name</th>
